<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat android:key="vibrate" android:title="@string/pref_vibrate"
        android:defaultValue="true" />
    <SeekBarPreference android:key="vibrate_ms" android:title="@string/pref_vibrate_ms"
        android:defaultValue="20" android:max="80" app:min="5" app:showSeekBarValue="true"
        android:dependency="vibrate" />
    <SwitchPreferenceCompat android:key="sound" android:title="@string/pref_sound"
        android:defaultValue="true" />
    <ListPreference android:key="sound_type" android:title="@string/pref_sound_type"
        android:entries="@array/sound_type_names" android:entryValues="@array/sound_type_values"
        android:defaultValue="wood" android:dependency="sound"
        app:useSimpleSummaryProvider="true" />
    <SeekBarPreference android:key="sound_vol" android:title="@string/pref_sound_vol"
        android:defaultValue="15" android:max="100" app:min="5" app:showSeekBarValue="true"
        android:dependency="sound" />
</PreferenceScreen>
