<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference android:key="col_key_mode"
        android:title="@string/pref_col_mode"
        android:entries="@array/col_mode_names"
        android:entryValues="@array/col_mode_values"
        android:defaultValue="1"
        app:useSimpleSummaryProvider="true" />
    <com.elyas.multiling.ColorPreference android:key="col_key"
        android:title="@string/pref_col_first" android:defaultValue="#272B33" />
    <com.elyas.multiling.ColorPreference android:key="col_key_grad"
        android:title="@string/pref_col_second" android:defaultValue="#3C4250" />
    <ListPreference android:key="col_key_grad_style"
        android:title="@string/pref_col_grad_style"
        android:entries="@array/grad_style_names"
        android:entryValues="@array/grad_style_values"
        android:defaultValue="linear"
        app:useSimpleSummaryProvider="true" />
    <ListPreference android:key="col_key_grad_dir"
        android:title="@string/pref_col_grad_dir"
        android:entries="@array/grad_dir_names"
        android:entryValues="@array/grad_dir_values"
        android:defaultValue="v"
        app:useSimpleSummaryProvider="true" />
</PreferenceScreen>
